--- a/config_server/src/main/resources/bootstrap.yml
+++ b/config_server/src/main/resources/bootstrap.yml
@@ -5,5 +5,5 @@ spring:
     config:
       server:
         git:
-          uri:
+          uri: https://github.com/oldRay-leilei/o2o_diancan.git
           search-paths: config-repo
