--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,12 @@
     <packaging>pom</packaging>
     <modules>
         <module>config_server</module>
+        <module>eureka_server</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <version>2.0.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
