消费方配置

--- a/consumer_service/src/main/resources/bootstrap.yml
+++ b/consumer_service/src/main/resources/bootstrap.yml
@@ -1,7 +1,6 @@
-
 spring:
   application:
-    name: eureka-server
+    name: consumer-server
   cloud:
     config:
       uri: http://localhost:7001
