--- a/eureka_server/src/main/resources/bootstrap.yml
+++ b/eureka_server/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: consumer-server
+    name: eureka-server
   cloud:
     config:
       uri: http://localhost:7001
