消费方配置

--- a/config-repo/eureka-server-dev.yml
+++ b/config-repo/eureka-server-dev.yml
@@ -7,3 +7,5 @@ eureka:
     register-with-eureka: false
   instance:
     hostname: localhost
+    register-with-eureka: false
+    fetch-registry: false
